objects/Deadline__c.object
<CustomObject>
    <fields>
        <fullName>Anfrage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Anfrage</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Fristen</relationshipLabel>
        <relationshipName>Fristen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BypassProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <label>Fall</label>
        <referenceTo>Claim__c</referenceTo>
        <relationshipName>Deadlines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Datum</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_up_Period__c</fullName>
        <defaultValue>6</defaultValue>
        <label>Warnzeitraum vor Fristablauf</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FristImpID__c</fullName>
        <externalId>true</externalId>
        <label>FristImpID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_My_Deadline__c</fullName>
        <formula>Claim__r.Is_My_Claim__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Deadline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <formula>Claim__r.Legal__r.FirstName + ' ' + Claim__r.Legal__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anwalt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Frist_ID__c</fullName>
        <label>Old Frist ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Claim__r.Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Deadline_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Bezeichnung</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Typ</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Deadline_Types</valueSetName>
        </valueSet>
    </fields>
    <label>Frist</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fristen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Claim__c</columns>
        <columns>Date__c</columns>
        <columns>Subject__c</columns>
        <columns>Legal_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Deadlines</fullName>
        <columns>NAME</columns>
        <columns>Claim__c</columns>
        <columns>Subject__c</columns>
        <columns>Date__c</columns>
        <columns>Legal_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_My_Deadline__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Meine Fristen</label>
        <sharedTo>
            <roleAndSubordinates>Legal</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>